# CreviceEngine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  HelloTriangleApplication.cpp  HelloTriangleApplication.h  LICENSE  README.md  main.cpp  xmake.lua
3rd/flecs/: xmake.lua
3rd/volk/: volk_imp.h
assetsManager/: AssetManager.cpp  AssetManager.hpp
common/: AssetResourceBridge.cpp  AssetResourceBridge.hpp  CVTimer.cpp  CVTimer.h  CamControl.h  Camera.cpp  Camera.h  GLMath.h  InputState.cpp  InputState.h  Resource.h  ResourceManager.cpp  ResourceManager.h  ShaderResourceManager.cpp
components/: Camera.cpp  Camera.h  MaterialHandle.h  MeshHandler.h  RenderHandler.h  Transform.h
components/resource/: ImageResComp.hpp  MaterialInfoComp.h  MeshLoadingSt.hpp  (+3 more)
containers/: Container.h
doc/: Doxyfile  Doxyfile-mcss
models/: apple.mtl  box2.mtl  readme.md  standed.mtl
render/: Context.cpp  Context.h  FrameResource.h  GpuResourceManager.cpp  GpuResourceManager.h  Material.h  Model.h  RenderAble.h  RenderServer.cpp  RenderServer.h  ShaderPack.h  Texture.h  Uniform.h  VkResourceBridge.cpp  VkResourceBridge.hpp
resource/: Image.h  Model.h
scene/: Camera.cpp  Camera.h
shaders/: compile.bat  in.glsl  shader.frag  shader.vert
src/: xmake.lua
stl/: CreviceDeque.h  CreviceHashMap.h  CreviceHashSet.h  CreviceQueue.h  CreviceSTL.h  CreviceSharedPtr.h  CreviceString.h  CreviceVector.h  CreviceVectorMap.h  CreviceVectorSet.h
systems/: default_render_sys.h  sys_asset_loader.hpp
systems_cust/: cust_system.h
tests/: testGraphIter.drawio  testRenderGraph.cpp
(+114 files in other folders)
